# openNML

./: CMakeLists.txt  README.md
src/core/: CMakeLists.txt
src/core/include/: nmlib.hpp
src/utils/: CMakeLists.txt
